--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "ckeditor4-react": "^1.0.0",
     "dotenv": "^8.2.0",
     "env-cmd": "^10.0.1",
     "node-sass": "^4.13.0",
